Updated the corn-rings.html with the full recipe details

--- a/recipes/corn-rings.html
+++ b/recipes/corn-rings.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Corn Rings</title>
-        <meta charset="utf-8">
-    </head>
-    <body>
-        <h1>Corn Rings</h1>
-        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9242549.jpg&q=85" alt="Image of prepared Corn Rings">
-    </body>
+
+<head>
+    <title>Corn Rings</title>
+    <meta charset="utf-8">
+</head>
+
+<body>
+    <h1>Corn Rings</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9242549.jpg&q=85"
+        alt="Image of prepared Corn Rings">
+    <h3>Description</h3>
+    <p>A small twist for the corn on the cob</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>¼ cup unsalted butter </li>
+        <li>½ teaspoon garlic powder </li>
+        <li>½ teaspoon onion powder </li>
+        <li>½ teaspoon chili powder </li>
+        <li>½ teaspoon Cajun seasoning </li>
+        <li>2 ears fresh corn, sliced into 6 equal-sized rings </li>
+        <li>sea salt to taste </li>
+        <li>2 teaspoons chopped fresh chives </li>
+        <li>¼ cup ranch dressing, or to taste </li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Preheat the oven to 400 degrees F (200 degrees C).</li>
+        <li>Combine butter, chili powder, garlic powder, onion powder, and Cajun seasoning in a microwave-safe dish
+            and cook in the microwave until butter is fully melted, about 1 minute. Remove from microwave and stir.
+        </li>
+        <li>Use tongs to dip a corn ring into the spiced butter, making sure to coat it thoroughly in the spices.
+            Transfer to a plate and continue until all of the rings have been dipped. There will be butter
+            remaining.</li>
+        <li>Heat an oven-safe skillet over medium heat. Once heated, place corn rings into the skillet, season them
+            individually with sea salt, and let them sizzle away until a nice sear has developed, about 3 minutes.
+            Flip and use a basting brush to brush remaining butter onto the seared sides of the rings. Season again
+            with salt and continue to cook for 2 more minutes.</li>
+        <li>Transfer the skillet into the preheated oven and cook for 10 minutes. Carefully flip the rings and cook
+            for 5 more minutes.</li>
+        <li>Remove from the oven and transfer to a serving platter. Sprinkle chives over top and serve with ranch
+            dressing, along with corn skewers for picking up individual rings.</li>
+    </ol>
+    <h3>Source</h3>
+    <a href="https://www.allrecipes.com/recipe/285427/corn-rings/">allrecipes full recipe</a>
+
+</body>
+
 </html>
