Added banana-bread.html and guacamole.html with the respective recipes, updated the index.html with the links for each of the previous recipes

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/corn-rings.html">Corn Rings</a>
+        <a href="./recipes/banana-bread.html">Banana Bread</a>
+        <a href="./recipes/guacamole.html">Guacamole</a>
     </body>
 </html>
