--- a/recipes/corn-rings.html
+++ b/recipes/corn-rings.html
@@ -43,7 +43,7 @@
             dressing, along with corn skewers for picking up individual rings.</li>
     </ol>
     <h3>Source</h3>
-    <a href="https://www.allrecipes.com/recipe/285427/corn-rings/">allrecipes full recipe</a>
+    <a href="https://www.allrecipes.com/recipe/285427/corn-rings/">Link to the original recipe</a>
 
 </body>
 
