--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/corn-rings.html">Corn Rings</a>
-        <a href="./recipes/banana-bread.html">Banana Bread</a>
-        <a href="./recipes/guacamole.html">Guacamole</a>
+        <ul>
+            <li><a href="./recipes/corn-rings.html">Corn Rings</a></li>
+            <li><a href="./recipes/banana-bread.html">Banana Bread</a></li>
+            <li><a href="./recipes/guacamole.html">Guacamole</a></li>
+        </ul>        
     </body>
 </html>
